--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-title: var(--font-gambarino);
+  --font-sans: var(--font-raleway);
 }
