--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,30 @@
   --font-sans: var(--font-raleway);
 }
 
+.hover-line::after {
+  width: 100%;
+  height: 2px;
+  background: currentColor;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 1px;
+  transform: scaleX(0);
+  transform-origin: right center;
+  transition: transform .5s cubic-bezier(1, 0, 0, 1);
+  will-change: transform;
+}
+
+.hover-line:hover::after {
+  transform: scaleX(1);
+  transform-origin: left center;
+}
+
+.no-scroll {
+  inline-size: 100%;
+  position: fixed;
+}
+
 .blured-bg {
   -webkit-backdrop-filter: blur(12px);
   backdrop-filter: blur(12px);
