--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-title: var(--font-gambarino);
-  --font-sans: var(--font-raleway);
+  --font-sans: var(--font-futura-book);
 }
 
 .hover-line::after {
