--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,7 +50,6 @@ header.search-active .controls {
   box-shadow: 0 4px 30px #0000001a;
 }
 
-
 .glow-bg {
   background-color: hsla(0, 0%, 0%, 0);
   background-image:
@@ -70,4 +69,57 @@ header.search-active .controls {
 /* Hide scrollbar  */
 ::-webkit-scrollbar {
   display: none;
+}
+
+
+/* Animation Keyframes */
+::view-transition-old(root) {
+  animation: slide-out 1s cubic-bezier(0.496, 0.004, 0, 1) forwards;
+}
+
+::view-transition-new(root) {
+  animation: slide-in 1s cubic-bezier(0.496, 0.004, 0, 1) forwards;
+}
+
+@keyframes slide-out {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  to {
+    opacity: 0.2;
+    transform: translateY(-35%);
+  }
+}
+
+@keyframes slide-in {
+  from {
+    clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
+  }
+
+  to {
+    clip-path: polygon(0% 100%, 100% 100%, 100% 0%, 0% 0%);
+  }
+}
+
+/* Persistent Elements */
+header {
+  view-transition-name: header;
+}
+
+::view-transition-old(header),
+::view-transition-new(header) {
+  animation: none;
+}
+
+/* Reduced Motion Preferences */
+@media (prefers-reduced-motion: reduce) {
+
+  ::view-transition,
+  ::view-transition-group(*),
+  ::view-transition-old(*),
+  ::view-transition-new(*) {
+    animation-duration: 0.001s;
+  }
 }
