Disable view transitions on reduced motion is enabled

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,6 +120,6 @@ header {
   ::view-transition-group(*),
   ::view-transition-old(*),
   ::view-transition-new(*) {
-    animation-duration: 0.001s;
+    animation: none;
   }
 }
